@@ -49,6 +49,9 @@ PKG_CHECK_MODULES([JS], [$REQUIRE_MOZILLA_JS], , [have_js=no])
 
 AX_CHECK_GLUT
 
+AC_ARG_VAR([DOXYGEN])
+AC_PATH_PROG([DOXYGEN], [doxygen])
+
 #
 # gzipped file support
 #
