@@ -2,12 +2,16 @@ docdir = $(datadir)/doc/@PACKAGE_TARNAME@-@PACKAGE_VERSION@
 
 EXTRA_DIST = \
         Doxyfile \
-        openvrml.css \
         doxygen-header \
         doxygen-footer \
         index.doc \
         conformance.doc \
         manual
+
+doc:
+	cd $(srcdir) && $(DOXYGEN)
+
+dist-hook: doc
 
 install-data-local:
 	$(mkinstalldirs) $(docdir)/manual
